- Upgraded Java version.